--- a/package.json
+++ b/package.json
@@ -24,10 +24,25 @@
     "eslint-plugin-import": "^2.22.1"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
     "mongoose": "^5.11.5",
     "nodemon": "^2.0.6",
+    "path": "^0.12.7",
     "supertest": "^6.0.1"
+  },
+  "nodemonConfig": {
+    "restartable": "rs",
+    "ignore": [
+      "node_modules/**/node_modules"
+    ],
+    "delay": "2500",
+    "env": {
+      "NODE_ENV": "development",
+      "NODE_CONFIG_DIR": "./config"
+    }
   }
 }
